<resources>
    <string name="app_name">Smack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="don_t_have_a_account">Don´t have a account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="re_insert_password">Re-insert password</string>
    <string name="create_user">Create user</string>
    <string name="user_name">User name</string>
    <string name="tap_to_change_your_user_avatar">Tap to change your user avatar</string>
    <string name="avatar_image">avatar image</string>
    <string name="generate_background_color">Generate background color</string>
    <string name="save">Save</string>
    <string name="add_channel">add channel</string>
    <string name="some_guy">some guy</string>
    <string name="login">Login</string>
    <string name="please_log_in">Please Log In</string>
    <string name="message">message</string>
    <string name="logout">Logout</string>
    <string name="send_message">send message</string>
    <string name="some_guy_smack_com">some_guy@smack.com</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
</resources>
