<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/loginEmailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginPasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailText"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/loginEmailText"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText" />

    <Button
        android:id="@+id/loginLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="loginLoginButtonClicked"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordText"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordText" />

    <TextView
        android:id="@+id/loginHintText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/don_t_have_a_account"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/loginLoginButton"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/loginLoginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginLoginButton" />

    <Button
        android:id="@+id/loginSignUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="loginSignUpButtonClicked"
        android:text="@string/sign_up_here"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/loginHintText"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/loginHintText"
        app:layout_constraintTop_toBottomOf="@+id/loginHintText" />
</android.support.constraint.ConstraintLayout>