<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.CreateUserActivity">

    <EditText
        android:id="@+id/emailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/userNameText" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/rePasswordTextLayout"
        app:layout_constraintStart_toStartOf="@+id/rePasswordTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/rePasswordTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/createUserButton"
        app:layout_constraintStart_toStartOf="@+id/createUserButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextLayout"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/rePasswordTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/createUserButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:onClick="createUserButtonClicked"
        android:text="@string/create_user"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rePasswordTextLayout" />

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/emailText"
        app:layout_constraintStart_toStartOf="@+id/emailText"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>