<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="26dp"
            android:text="@string/add_channel"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addChannelNameTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="52dp" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addChannelNameTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/channel_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addChannelDescTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="112dp" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addChannelDescTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/channel_description" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>